[package]
name = "hard"
version = "0.1.0"
authors = ["Mariusz Białończyk <manio@skyboo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.*"
postgres-openssl = "0.3.0"
rust-ini = "0.10.3"
openssl = { version = "0.10.*", features = ["vendored"] }
ctrlc = { version = "3.1.0", features = ["termination"] }
log = "0.4.1"
simplelog = "^0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.4.4", features = ["tls"] }
sun = "0.2"
evdev = "0.10.1"
