[package]
name = "hard"
version = "0.1.0"
authors = ["Mariusz Białończyk <manio@skyboo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.*"
postgres-openssl = "0.3.0"
rust-ini = "0.10.3"
openssl = { version = "0.10.*", features = ["vendored"] }
ctrlc = { version = "3.1.0", features = ["termination"] }
log = "0.4.1"
simplelog = { version = "0.11.0", features = ["paris", "ansi_term"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["tls"] }
sun = "0.2"
evdev = "0.11.3"
futures = "0.3"
tokio = { version = "1.5.0", features = ["full"] }
crc16 = "0.4.0"
influxdb = { version = "0.3.0", features = ["derive"] }
chrono = { version = "0.4.11", features = ["serde"] }
tokio-compat-02 = "0.1"
humantime = "2.0.1"
termios = "0.3.3"
tokio-modbus = { version = "0.5.2", default-features = false, features = ["tcp"] }
